test/compilable/extra-files/test3541b.d
module test3541b;

void main()
{
}
