test/fail_compilation/fail139.d
void test(typeof(&test) p) { }
void main() { test(null); }
